--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <th class="missed-col">Days Missed-col</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr class="student">
+            <tbody id='body'>
+                <!-- <tr class="student">
                     <td class="name-col">Slappy the Frog</td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
@@ -78,7 +78,8 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
-                    <td class="missed-col">0</td>
+        \            <td class="missed-col">0</td>
+
                 </tr>
                 <tr class="student">
                     <td class="name-col">Gregory the Goat</td>
@@ -111,9 +112,9 @@
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="attend-col"><input type="checkbox"></td>
                     <td class="missed-col">0</td>
-                </tr>
+                </tr> -->
             </tbody>
-        </table>
+                </table>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="js/app.js"></script>
